--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,12 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+  background-color:white;
 }
 
-a {
-  color: #00B7FF;
+body > div{
+  margin: auto;
+  margin-top: 20%;
+}
+
+h3{
+  text-align: center;
 }
